Changed name of turrets in the pr2_body_model

--- a/sbpl_collision_checking/config/pr2_body_model.yaml
+++ b/sbpl_collision_checking/config/pr2_body_model.yaml
@@ -18,9 +18,9 @@ collision_groups:
     - name: base
       root: base_link
     - name: right_turret
-      root: r_shoulder_pan_link
+      root: arm0_shoulder_pan_link
     - name: left_turret
-      root: l_shoulder_pan_link
+      root: arm1_shoulder_pan_link
 
 collision_spheres:
 
