--- a/sbpl_collision_checking/config/pr2_arm1_voxel_2arm_model.yaml
+++ b/sbpl_collision_checking/config/pr2_arm1_voxel_2arm_model.yaml
@@ -1,38 +1,44 @@
 collision_groups:
 
+  - name: body
+    type: voxels
+    root_name: base_footprint
+    tip_name: head_pan_link
+    collision_links:
+    - name: head_tilt
+      root: head_tilt_link
+    - name: head_pan
+      root: head_pan_link
+    - name: laser_mount
+      root: laser_tilt_mount_link
+#    - name: torso
+#      root: torso_lift_link
+    - name: bellows
+      root: base_bellow_link
+    - name: base
+      root: base_link
+
   - name: arm0
-    type: spheres
+    type: voxels
     root_name: base_footprint
     tip_name: arm0_wrist_roll_link
     collision_links:
     - name: shoulder
       root: arm0_shoulder_pan_link
-      spheres: sh0 tur0 tur1 tur2 tur3
-      low_res_spheres: lr_sh0 tur0 tur1 tur2 tur3
     - name: upper_arm
-      root: arm0_upper_arm_roll_link
-      spheres: ua0 ua1 ua2 ua3
-      low_res_spheres: lr_ua0 lr_ua1 lr_ua2
+      root: arm0_upper_arm_link
     - name: forearm
-      root: arm0_forearm_roll_link
-      spheres: fa0 fa1 fa2 fa3 fa4 fa5 fa6
-      low_res_spheres: lr_fa0 lr_fa1
+      root: arm0_forearm_link
     - name: gripper
-      root: arm0_wrist_roll_link
-      spheres: gr0 gr1 gr2
-      low_res_spheres: lr_gr0 lr_gr1
+      root: arm0_gripper_palm_link
     - name: left_finger
       root: arm0_gripper_l_finger_link
-      spheres: lf0 lf1
     - name: right_finger
       root: arm0_gripper_r_finger_link
-      spheres: rf0 rf1
     - name: right_finger_tip
       root: arm0_gripper_r_finger_tip_link
-      spheres: rft0 rft1
     - name: left_finger_tip
       root: arm0_gripper_l_finger_tip_link
-      spheres: lft0 lft1
 
   - name: arm1
     type: spheres
@@ -41,8 +47,8 @@ collision_groups:
     collision_links:
     - name: shoulder
       root: arm1_shoulder_pan_link
-      spheres: sh0 tur0 tur1 tur2 tur3
-      low_res_spheres: lr_sh0 tur0 tur1 tur2 tur3
+      spheres: sh0 tur0 tur1
+      low_res_spheres: lr_sh0 tur0 tur1
     - name: upper_arm
       root: arm1_upper_arm_roll_link
       spheres: ua0 ua1 ua2 ua3
@@ -68,84 +74,12 @@ collision_groups:
       root: arm1_gripper_l_finger_tip_link
       spheres: lft0 lft1
 
-  - name: arm2
-    type: spheres
-    root_name: base_footprint
-    tip_name: arm2_wrist_roll_link
-    collision_links:
-    - name: shoulder
-      root: arm2_shoulder_pan_link
-      spheres: sh0 tur0 tur1 tur2 tur3
-      low_res_spheres: lr_sh0 tur0 tur1 tur2 tur3
-    - name: upper_arm
-      root: arm2_upper_arm_roll_link
-      spheres: ua0 ua1 ua2 ua3
-      low_res_spheres: lr_ua0 lr_ua1 lr_ua2
-    - name: forearm
-      root: arm2_forearm_roll_link
-      spheres: fa0 fa1 fa2 fa3 fa4 fa5 fa6
-      low_res_spheres: lr_fa0 lr_fa1
-    - name: gripper
-      root: arm2_wrist_roll_link
-      spheres: gr0 gr1 gr2
-      low_res_spheres: lr_gr0 lr_gr1
-    - name: left_finger
-      root: arm2_gripper_l_finger_link
-      spheres: lf0 lf1
-    - name: right_finger
-      root: arm2_gripper_r_finger_link
-      spheres: rf0 rf1
-    - name: right_finger_tip
-      root: arm2_gripper_r_finger_tip_link
-      spheres: rft0 rft1
-    - name: left_finger_tip
-      root: arm2_gripper_l_finger_tip_link
-      spheres: lft0 lft1
-
-  - name: arm3
-    type: spheres
-    root_name: base_footprint
-    tip_name: arm3_wrist_roll_link
-    collision_links:
-    - name: shoulder
-      root: arm3_shoulder_pan_link
-      spheres: sh0 tur0 tur1 tur2 tur3
-      low_res_spheres: lr_sh0 tur0 tur1 tur2 tur3
-    - name: upper_arm
-      root: arm3_upper_arm_roll_link
-      spheres: ua0 ua1 ua2 ua3
-      low_res_spheres: lr_ua0 lr_ua1 lr_ua2
-    - name: forearm
-      root: arm3_forearm_roll_link
-      spheres: fa0 fa1 fa2 fa3 fa4 fa5 fa6
-      low_res_spheres: lr_fa0 lr_fa1
-    - name: gripper
-      root: arm3_wrist_roll_link
-      spheres: gr0 gr1 gr2
-      low_res_spheres: lr_gr0 lr_gr1
-    - name: left_finger
-      root: arm3_gripper_l_finger_link
-      spheres: lf0 lf1
-    - name: right_finger
-      root: arm3_gripper_r_finger_link
-      spheres: rf0 rf1
-    - name: right_finger_tip
-      root: arm3_gripper_r_finger_tip_link
-      spheres: rft0 rft1
-    - name: left_finger_tip
-      root: arm3_gripper_l_finger_tip_link
-      spheres: lft0 lft1
-
-
-
 collision_spheres:
-    # Radius of sh0 should really be 0.16
-  - {name: sh0, x: 0.13, y: 0.0, z: -0.03, radius: 0.15, priority: 5}
 
-  - {name: tur0, x: -0.0, y: -0.0, z: 0.00, radius: 0.175, priority: 5}
-  - {name: tur1, x: -0.0, y: -0.0, z: -0.13, radius: 0.17, priority: 5}
-  - {name: tur2, x: -0.0, y: -0.0, z: -0.26, radius: 0.17, priority: 5}
-  - {name: tur3, x: -0.0, y: -0.0, z: -0.41, radius: 0.175, priority: 5}
+  - {name: sh0, x: 0.13, y: 0.0, z: -0.03, radius: 0.15, priority: 5}
+  
+  - {name: tur0, x: -0.02, y: -0.03, z: -0.3, radius: 0.09, priority: 5}
+  - {name: tur1, x: -0.02, y: -0.03, z: -0.42, radius: 0.09, priority: 5}
 
   - {name: ua0, x: 0.18, y: 0.0, z: -0.015, radius: 0.11, priority: 3}
   - {name: ua1, x: 0.26, y: 0.00, z: -0.035, radius: 0.08, priority: 3}
@@ -188,4 +122,3 @@ collision_spheres:
 
   - {name: lr_gr0, x: 0.06, y: 0.0, z: 0.00, radius: 0.1, priority: 1}
   - {name: lr_gr1, x: 0.16, y: 0.0, z: 0.00, radius: 0.1, priority: 1}
-   
