Added function to get shortest path from BFS

--- a/bfs3d/CMakeLists.txt
+++ b/bfs3d/CMakeLists.txt
@@ -24,7 +24,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-rosbuild_add_library(bfs3d src/BFS_3D.cpp src/Search.cpp)
+rosbuild_add_library(bfs3d src/BFS_3D.cpp src/Search.cpp src/BFS_Util.cpp)
 
 rosbuild_add_executable(test_bfs src/test_bfs.cpp)
 target_link_libraries(test_bfs bfs3d)
