--- a/sbpl_arm_planner/config/pr2_left_arm.yaml
+++ b/sbpl_arm_planner/config/pr2_left_arm.yaml
@@ -3,7 +3,7 @@ planning:
   verbose: true
   verbose_collisions: false
   shortcut_path: true
-  interpolate_path: false
+  interpolate_path: true
   use_bfs_heuristic: true
   group_name: left_arm
   planning_joints:
@@ -32,7 +32,7 @@ visualizations:
   expanded_states: true
   trajectory: false
   collision_model_trajectory: false
-  trajectory_throttle: 1
+  trajectory_throttle: 8
 
 #  occupancy_grid:
 #    origin_x: -0.75
