--- a/sbpl_arm_planner/config/pr2_left_arm.yaml
+++ b/sbpl_arm_planner/config/pr2_left_arm.yaml
@@ -3,7 +3,7 @@ planning:
   verbose: true
   verbose_collisions: false
   shortcut_path: true
-  interpolate_path: true
+  interpolate_path: false
   use_bfs_heuristic: true
   group_name: left_arm
   planning_joints:
