Turned off shortcutting in the default config files. We do it later on in the CSP now instead.

--- a/sbpl_arm_planner/config/pr2_left_arm.yaml
+++ b/sbpl_arm_planner/config/pr2_left_arm.yaml
@@ -2,7 +2,7 @@ planning:
   epsilon: 100
   verbose: true
   verbose_collisions: false
-  shortcut_path: true
+  shortcut_path: false
   interpolate_path: false
   use_bfs_heuristic: true
   group_name: left_arm
